--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,16 +8,9 @@
     <string name="shr_filter_title">Filter</string>
     <string name="shr_search_title">Search</string>
     <string name="shr_product_title">Title</string>
-    <string name="shr_product_description">Status</string>
+    <string name="shr_product_status">Status</string>
 
     <!-- Shrine backdrop menu labels -->
-    <string name="shr_featured_label">Featured</string>
-    <string name="shr_apartment_label">Apartment</string>
-    <string name="shr_accessories_label">Accessories</string>
-    <string name="shr_shoes_label">Shoes</string>
-    <string name="shr_tops_label">Tops</string>
-    <string name="shr_bottoms_label">Bottoms</string>
-    <string name="shr_dresses_label">Dresses</string>
     <string name="shr_account_label">My Account</string>
-    <string name="shr_logo_content_description">Shrine Logo</string>
+    <string name="shr_logo_content_description">Anime Risuto Logo</string>
 </resources>
