--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <!-- Shrine backdrop menu labels -->
     <string name="shr_account_label">My Account</string>
     <string name="shr_logo_content_description">Anime Risuto Logo</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
